--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -2,6 +2,7 @@
     height: 100vh;
     position: absolute;
     margin-top: -100vh;
+    background-color: tomato;
     z-index: 0;
 }
 .topSection img{
