--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ main,
 body {
   font-family: inter;
   color: black;
-  background: tomato;
+  /* background: tomato; */
 }
 /* something changed */
  h1{
