--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,44 +1,34 @@
-body {
-  font-family: "Monoton", cursive;
+@import url('https://rsms.me/inter/inter.css');
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+main,
+#root {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
-section p {
+
+body {
+  font-family: inter;
+  color: black;
+  background: #f0f0f0;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
   position: absolute;
-  top: 20px;
-  letter-spacing: 3px;
-  left: 20px;
-  color: #222;
-  font-weight: 700;
-  border: 1px solid #222;
-  padding: 10px;
-}
-section {
-  position: relative;
-  height: 100vh;
-  color: #222;
-  display: grid;
-  place-content: center;
-}
-section:nth-child(1) {
-  background: #faded7;
-}
-section:nth-child(2) {
-  background: #feffbf;
-}
-section:nth-child(3) {
-  background: #b0efef;
-}
-section:nth-child(4) {
-  background: #ffcbcb;
-}
-.lerp-wrap {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 1.25rem;
-  line-height: 1.1;
-}
-.lerp-wrap span {
-  display: inline-block;
-  font-size: clamp(32px, 5vw, 7vw);
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  font-weight: 600;
+  font-size: 8em;
+  letter-spacing: -0.075em;
+  white-space: nowrap;
 }
