--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,36 @@
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 
 * {
   box-sizing: border-box;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@keyframes RotatingObject {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(-45deg);
+  }
 }
 
 html,
@@ -31,4 +60,97 @@ h1 {
   font-size: 8em;
   letter-spacing: -0.075em;
   white-space: nowrap;
+}
+
+.Container {
+  height: 100vh;
+  @media (max-width: 980px) {
+    h1 {
+      font-size: 2rem;
+    }
+    height: 100vh;
+  }
+}
+.ContainerClosed {
+  position: fixed;
+}
+.ContainerOpen {
+  height: 150vh;
+  position: relative;
+  background-color: #efe22b;
+  .Navbar {
+    width: 100vw;
+    height: 10vh;
+    background-color: #1d1d1d;
+    -webkit-animation: fadeInUp 500ms ease-in-out;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .NavListUL {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      list-style-type: none;
+      color: #efe22b;
+      cursor: pointer;
+      :hover {
+        font-size: 1.2rem;
+      }
+      li {
+        width: 15vw;
+        height: 7vh;
+        // background-color: #fafafa;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.3s ease-in-out;
+
+        img {
+          width: 40%;
+        }
+      }
+    }
+  }
+}
+.NavbarAbs {
+  width: 100vw;
+  height: 10vh;
+  background-color: #1d1d1d;
+  transition: 2s all ease-in-out;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  -webkit-animation: fadeInDown 500ms ease-in-out;
+  .NavListUL {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style-type: none;
+    color: #efe22b;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+    :hover {
+      transition: 1s ease-in-out;
+      font-size: 1.2rem;
+    }
+    padding: 0;
+    li {
+      width: 15vw;
+      height: 7vh;
+      // background-color: #fafafa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.3s ease-in-out;
+      img {
+        width: 40%;
+        animation: RotatingObject 3s alternate infinite;
+      }
+    }
+  }
 }
