--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,7 +133,7 @@ h1 {
     list-style-type: none;
     color: #efe22b;
     cursor: pointer;
-    transition: 0.5s ease-in-out;
+    // transition: 0.5s ease-in-out;
     :hover {
       transition: 1s ease-in-out;
       font-size: 1.2rem;
