--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,59 @@ h1 {
   white-space: nowrap;
 }
 
+.StartPrompt {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  // background-color: orangered;
+  h2 {
+    // background-color: orchid;
+    padding: 0;
+    margin: 0;
+  }
+  .arrow {
+    border: solid black;
+    border-width: 0 5px 5px 0;
+    display: inline-block;
+    padding: 3px;
+    // background-color: orangered;
+  }
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+}
+.StartPrompt1 {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  transition: 2 ease-in-out;
+  // background-color: orangered;
+  h2 {
+    // background-color: orchid;
+    padding: 0;
+    margin: 0;
+  }
+  .arrow {
+    border: solid black;
+    border-width: 0 5px 5px 0;
+    display: inline-block;
+    padding: 3px;
+    // background-color: orangered;
+  }
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+}
+
 .Container {
   height: 100vh;
   @media (max-width: 980px) {
@@ -96,7 +149,8 @@ h1 {
       color: #efe22b;
       cursor: pointer;
       :hover {
-        font-size: 1.2rem;
+        transition: 0.3s ease-in-out;
+        font-size: 1.1rem;
       }
       li {
         width: 15vw;
@@ -136,8 +190,49 @@ h1 {
     cursor: pointer;
     // transition: 0.5s ease-in-out;
     :hover {
-      transition: 1s ease-in-out;
-      font-size: 1.2rem;
+      transition: 0.3s ease-in-out;
+      font-size: 1.1rem;
+    }
+    padding: 0;
+    li {
+      width: 15vw;
+      height: 7vh;
+      // background-color: #fafafa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.3s ease-in-out;
+      img {
+        width: 40%;
+        animation: RotatingObject 3s alternate infinite;
+      }
+    }
+  }
+}
+.NavbarAbs2 {
+  width: 100vw;
+  height: 10vh;
+  z-index: 1;
+  background-color: #fafafa;
+  transition: 2s all ease-in-out;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  -webkit-animation: fadeInDown 500ms ease-in-out;
+  .NavListUL {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style-type: none;
+    color: #000;
+    cursor: pointer;
+    // transition: 0.5s ease-in-out;
+    :hover {
+      transition: 0.3s ease-in-out;
+      font-size: 1.1rem;
     }
     padding: 0;
     li {
@@ -158,11 +253,11 @@ h1 {
 
 .Contents {
   height: 100%;
-  margin-top: 10vh;
   .Section1 {
     // background-color: blue;
-    height: 100vh;
+    height: 80vh;
     display: flex;
+    margin-top: 10vh;
     align-items: center;
     justify-content: space-around;
     // padding: 0 5%;
@@ -172,13 +267,86 @@ h1 {
         // background-color: orangered;
         padding: 0;
       }
-    }.Right1 {
+    }
+    .Right1 {
       // background-color: orangered;
       h2 {
         font-size: 5rem;
         width: 100%;
         // background-color: orange;
         padding: 0;
+      }
+    }
+  }
+  .Section2 {
+    Canvas {
+      height: 90vh;
+      // background-color: orchid;
+    }
+  }
+  .Section3 {
+    background-color: #390113;
+    height: 90vh;
+    // background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    // padding: 0 5%;
+    .Left2 {
+
+      transition: 0.5s ease-in-out;
+      h2 {
+        margin: 0;
+        font-size: 5rem;
+        // background-color: orangered;
+        padding: 0;
+        color: #efe22b;
+      }
+      h3 {
+        font-size: 1.3rem;
+        // background-color: orangered;
+        padding: 0;
+        color: #efe22b;
+      }
+      
+      .KnowSkills {
+        height: 10vh;
+        width: 40vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #efe22b;
+        border-radius: 20px;
+        transition: 1.5s ease-in-out;
+        z-index: 2;
+        h4{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 10vh;
+          width: 40vw;
+          transition: 0.5s ease-in-out;
+         }
+        :hover {
+          height: 10vh;
+          width: 40vw;
+          background-color: #000;
+          color:#efe22c;
+          font-size: 1.5rem;
+          border-radius: 20px;
+          cursor: pointer;
+          transition: 0.5s ease-in-out;
+        }
+      }
+    }
+    .Right2 {
+      Canvas {
+        width: 50vw;
+        height: 70vh;
+
+        // background-color: orchid;
+        border-left: 0.5px solid #efe22b;
+        box-shadow: 5px 20px #000;
       }
     }
   }
