--- a/src/Fiverr.scss
+++ b/src/Fiverr.scss
@@ -1,8 +1,13 @@
 .FiverrContainer {
-  height: 20vh;
+  height: 100%;
   width: 30vw;
   background-color: #fff;
   position: relative;
+  @media (max-width: 980px) {
+    // background-color: orange;
+    width: 94%;
+    margin: 3%;
+  }
   .topC {
     height: 30%;
     width: 100%;
@@ -31,7 +36,8 @@
   .bottomC {
     display: flex;
     flex-direction: column;
-    height: 70%;
+    justify-content: space-evenly;
+    height: 72%;
     width: 100%;
     .TopRow {
       display: flex;
@@ -56,29 +62,29 @@
     h4 {
       margin: 0 3%;
     }
+    a {
+        background-color: orange;
+        margin: 0;
+      .FreeButton {
+        background-color: #1d1d1d;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
 
-    .FreeButton {
-      background-color: #1d1d1d;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-
-      h2 {
+        h2 {
           color: #fff;
-        font-size: 1rem;
+          font-size: 1rem;
+        }
       }
     }
   }
 }
 .FreeButton:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
-      0 6px 6px rgba(0, 0, 0, 0.23);
-
-  }
-  .FiverrContainer:hover {
-    box-shadow: 0 30px 30px rgba(0, 0, 0, 0.19),
-      0 6px 6px rgba(0, 0, 0, 0.23);
-  }
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+.FiverrContainer:hover {
+  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
