--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,9 @@ main,
 body {
   font-family: inter;
   color: black;
-  background: #f0f0f0;
+  @media (max-width: 980px) {
+    background-color: #f0f0f0;
+  }
 }
 
 h1 {
@@ -69,6 +71,9 @@ h1 {
   text-align: center;
   padding: 0;
   margin: 0;
+  @media (max-width: 980px) {
+    bottom: 0px;
+  }
   // background-color: orangered;
   h2 {
     // background-color: orchid;
@@ -96,6 +101,7 @@ h1 {
   margin: 0;
   opacity: 0;
   transition: 2 ease-in-out;
+  
   // background-color: orangered;
   h2 {
     // background-color: orchid;
@@ -121,16 +127,21 @@ h1 {
     h1 {
       font-size: 2rem;
     }
-    height: 100vh;
+    height: 80vh;
   }
 }
 .ContainerClosed {
   position: fixed;
+  @media (max-width: 980px) {
+    visibility: hidden;
+  }
+  
 }
 .ContainerOpen {
   height: 150vh;
   position: relative;
   background-color: #efe22b;
+  
   .Navbar {
     width: 100vw;
     height: 10vh;
@@ -140,6 +151,18 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    @media (max-width: 980px) {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      z-index: 202;
+      background-color: transparent;
+      .menu{width: 100%;
+        background-color: #efe22c;
+        margin: 2% 0;
+      }
+    }
     .NavListUL {
       width: 100%;
       display: flex;
@@ -166,20 +189,69 @@ h1 {
         }
       }
     }
+    .NavListULM {
+      visibility: hidden;
+    //   width: 100%;
+    //   display: flex;
+    //   align-items: center;
+    //   justify-content: flex-end;
+    //   list-style-type: none;
+    //   color: #1d1d1d;
+    //   cursor: pointer;
+      
+    //   :hover {
+    //     font-size: 1.1rem;
+    //   }
+    //   .lineContainer{
+    //     height:10vh;
+    //     width: 20vw;
+    //     padding: 0;
+    //     margin: 0;
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: space-evenly;
+    //   }
+    //   li {
+    //     width: 15vw;
+    //     height: 7vh;
+    //     // background-color: #fafafa;
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     // transition: 0.3s ease-in-out;
+
+    //     img {
+    //       width: 40%;
+    //     }
+    //   }
+    }
   }
 }
 .NavbarAbs {
   width: 100vw;
-  height: 10vh;
+  height: 8vh;
   z-index: 1;
   background-color: #1d1d1d;
-  transition: 2s all ease-in-out;
+  transition: 0.3s all ease-in-out;
   position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
   top: 0;
   -webkit-animation: fadeInDown 500ms ease-in-out;
+  @media (max-width: 980px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 202;
+    background-color: #1d1d1d;
+      padding: 0;
+    .menu{
+      width: 100%;
+      margin: 0% 0% 0% 0%;
+      text-align: center;
+    }
+  }
   .NavListUL {
     width: 100%;
     display: flex;
@@ -208,33 +280,25 @@ h1 {
       }
     }
   }
-}
-.NavbarAbs2 {
-  width: 100vw;
-  height: 10vh;
-  z-index: 1;
-  background-color: #fafafa;
-  transition: 2s all ease-in-out;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  -webkit-animation: fadeInDown 500ms ease-in-out;
-  .NavListUL {
+  .NavListULM {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     list-style-type: none;
-    color: #000;
+    color: #f0f0f0;
     cursor: pointer;
-    // transition: 0.5s ease-in-out;
+    padding: 0;
     :hover {
-      transition: 0.3s ease-in-out;
       font-size: 1.1rem;
     }
-    padding: 0;
+    .lineContainer{
+      height:10vh;
+      width: 20vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
     li {
       width: 15vw;
       height: 7vh;
@@ -242,15 +306,14 @@ h1 {
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: 0.3s ease-in-out;
+      // transition: 0.3s ease-in-out;
+
       img {
         width: 40%;
-        animation: RotatingObject 3s alternate infinite;
       }
     }
   }
 }
-
 .Contents {
   height: 100%;
   .Section1 {
@@ -260,12 +323,19 @@ h1 {
     margin-top: 10vh;
     align-items: center;
     justify-content: space-around;
-    // padding: 0 5%;
+    @media (max-width: 980px) {
+      display: flex;
+      flex-direction: column;
+      height: 10vh;
+    }
     .Left1 {
       h2 {
         font-size: 5rem;
         // background-color: orangered;
         padding: 0;
+        @media (max-width: 980px) {
+          font-size: 4rem;
+        }
       }
     }
     .Right1 {
@@ -275,8 +345,14 @@ h1 {
         width: 100%;
         // background-color: orange;
         padding: 0;
+        @media (max-width: 980px) {
+          font-size: 3em;
+          text-align: center;
+          width: 100%;
+        }
       }
     }
+    // padding: 0 5%;
   }
   .Section2 {
     Canvas {
@@ -292,8 +368,17 @@ h1 {
     align-items: center;
     justify-content: space-around;
     // padding: 0 5%;
+    @media (max-width: 980px) {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      width: 100%;
+    }
     .Left2 {
-
+      @media (max-width: 980px) {
+        // background-color: orange;
+        margin: 3%;
+      }
       transition: 0.5s ease-in-out;
       h2 {
         margin: 0;
@@ -301,14 +386,23 @@ h1 {
         // background-color: orangered;
         padding: 0;
         color: #efe22b;
+        @media (max-width: 980px) {
+          font-size: 3rem;
+          margin: 3%;
+          text-align: center;
+        }
       }
       h3 {
         font-size: 1.3rem;
         // background-color: orangered;
         padding: 0;
         color: #efe22b;
+        @media (max-width: 980px) {
+          font-size: 1.3rem;
+          text-align: center;
+        }
       }
-      
+
       .KnowSkills {
         height: 10vh;
         width: 40vw;
@@ -319,23 +413,33 @@ h1 {
         border-radius: 20px;
         transition: 1.5s ease-in-out;
         z-index: 2;
-        h4{
+        @media (max-width: 980px) {
+          width: 100%;
+        }
+        h4 {
           display: flex;
           justify-content: center;
           align-items: center;
           height: 10vh;
           width: 40vw;
           transition: 0.5s ease-in-out;
-         }
+          @media (max-width: 980px) {
+            width: 100%;
+          }
+        }
         :hover {
           height: 10vh;
           width: 40vw;
           background-color: #000;
-          color:#efe22c;
+          color: #efe22c;
           font-size: 1.5rem;
           border-radius: 20px;
           cursor: pointer;
           transition: 0.5s ease-in-out;
+          @media (max-width: 980px) {
+            width: 100%;
+            font-size: 1rem;
+          }
         }
       }
     }
@@ -348,10 +452,16 @@ h1 {
         border-left: 0.5px solid #efe22b;
         box-shadow: 5px 20px #000;
       }
+      @media (max-width: 980px) {
+        width: 100%;
+        height: 50%;
+
+        border: 0.5px solid #efe22b;
+      }
     }
   }
   .Section4 {
-    background-color: rgb(11, 45, 77);
+    background-image: linear-gradient(to bottom,#390113, rgb(11, 45, 77));
     height: 90vh;
     // background-color: blue;
     display: flex;
@@ -359,8 +469,11 @@ h1 {
     align-items: center;
     justify-content: space-around;
     // padding: 0 5%;
+    @media (max-width: 980px) {
+      // background-color: orange;
+      height: 100vh;
+    }
     .Left2 {
-
       transition: 0.3s ease-in-out;
       h2 {
         margin: 0;
@@ -368,6 +481,12 @@ h1 {
         // background-color: orangered;
         padding: 0;
         color: #efe22b;
+        @media (max-width: 980px) {
+          // background-color: orange;
+          margin: 3% 0%;
+          font-size: 2.5rem;
+          width: 100%;
+        }
       }
       h3 {
         font-size: 1.3rem;
@@ -375,7 +494,7 @@ h1 {
         padding: 0;
         color: #efe22b;
       }
-      
+
       .KnowSkills {
         height: 10vh;
         width: 100%;
@@ -386,19 +505,19 @@ h1 {
         border-radius: 20px;
         transition: 0.3s ease-in-out;
         z-index: 2;
-        h4{
+        h4 {
           display: flex;
           justify-content: center;
           align-items: center;
           height: 10vh;
           width: 40vw;
           transition: 0.3s ease-in-out;
-         }
+        }
         :hover {
           height: 10vh;
           width: 100%;
           background-color: #000;
-          color:#efe22c;
+          color: #efe22c;
           font-size: 1.5rem;
           border-radius: 20px;
           cursor: pointer;
@@ -410,7 +529,12 @@ h1 {
       width: 100%;
       display: flex;
       justify-content: space-evenly;
-      h2{
+      @media (max-width: 980px) {
+        display: flex;
+        flex-direction: column;
+      }
+      h2 {
+        text-align: center;
         color: #fff;
       }
     }
