--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,7 @@ main,
 body {
   font-family: inter;
   color: black;
+  background-color: #efe22b;
   @media (max-width: 980px) {
     background-color: #f0f0f0;
   }
@@ -306,10 +307,31 @@ h1 {
       display: flex;
       justify-content: center;
       align-items: center;
-      // transition: 0.3s ease-in-out;
-
+    }
+  }
+}
+.openNav {
+  background-color: #1d1d1d;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      width: 100% !important;
+      padding: 5vh 0;
+      font-size: 1.5rem;
+      font-weight: bolder;
       img {
-        width: 40%;
+        // height: 10vh;
+        width: 20vw;
       }
     }
   }
@@ -418,6 +440,10 @@ h1 {
         bottom: 0;
         left: 0;
       }
+      @media (max-width: 980px) {
+        margin-top: -25%;
+        height: 20%;
+      }
       display: inline-block;
       position: absolute;
       // position: relative;
@@ -430,8 +456,10 @@ h1 {
     @media (max-width: 980px) {
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      justify-content: flex-start;
+      height: 90vh;
       width: 100%;
+      position: relative;
     }
     .Left2 {
       display: flex;
@@ -439,6 +467,7 @@ h1 {
       align-items: flex-start;
       @media (max-width: 980px) {
         // background-color: orange;
+        align-items: center;
         margin: 3%;
       }
       transition: 0.5s ease-in-out;
@@ -476,6 +505,11 @@ h1 {
         border-radius: 20px;
         transition: 0.2s ease-in-out;
         z-index: 2;
+        @media (max-width: 980px) {
+          width: 100%;
+          background-color: #d4d4d4;
+          height: 5vh;
+        }
         h4 {
           display: flex;
           justify-content: center;
@@ -485,6 +519,10 @@ h1 {
           border-radius: 20px;
           color: #fff;
           transition: 0.3s ease-in-out;
+          @media (max-width: 980px) {
+            width: 100%;
+            color: #1d1d1d;
+          }
         }
         :hover {
           height: 10vh;
@@ -497,6 +535,11 @@ h1 {
           border-radius: 20px;
           cursor: pointer;
           transition: 0.3s ease-in-out;
+          @media (max-width: 980px) {
+            width: 100%;
+            background-color: #d4d4d4;
+            height: 5vh;
+          }
         }
       }
     }
@@ -512,8 +555,9 @@ h1 {
       @media (max-width: 980px) {
         width: 100%;
         height: 50%;
-
         border: 0.5px solid #efe22b;
+        box-shadow: 100px 0px 50px 1px rgba(0, 0, 0, 0.9);
+
       }
     }
   }
@@ -536,9 +580,15 @@ h1 {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      @media (max-width: 980px) {
+        // background-color: orange;
+        align-items: center;
+        width: 94%;
+        margin: 3%;
+      }
       .github {
-        // width: 100%;
-        // height: 30%;
+        width: 100%;
+        height: 30%;
         display: flex;
         cursor: pointer;
         transition: 0.2s all ease-in-out;
@@ -551,11 +601,10 @@ h1 {
         }
         font-size: 1rem;
         background-color: #1d1d1d;
-        
       }
       .github:hover {
         color: #1d1d1d;
-        h2{
+        h2 {
           color: #1d1d1d;
         }
         background-color: #d4d4d4;
@@ -574,10 +623,10 @@ h1 {
           color: #d4d4d4;
         }
         background-color: #082f5c;
-        
-      }.linkedIn:hover {
+      }
+      .linkedIn:hover {
         color: #082f5c;
-        h2{
+        h2 {
           color: #082f5c;
         }
         background-color: #d4d4d4;
@@ -599,7 +648,7 @@ h1 {
       }
       .facebook:hover {
         color: #0559a7;
-        h2{
+        h2 {
           color: #0559a7;
         }
         background-color: #d4d4d4;
@@ -645,6 +694,11 @@ h1 {
         border-radius: 20px;
         transition: 0.2s ease-in-out;
         z-index: 2;
+        @media (max-width: 980px) {
+          width: 100%;
+          background-color: #d4d4d4;
+          height: 5vh;
+        }
         h4 {
           display: flex;
           justify-content: center;
@@ -654,6 +708,10 @@ h1 {
           border-radius: 20px;
           color: #fff;
           transition: 0.3s ease-in-out;
+          @media (max-width: 980px) {
+            width: 100%;
+            color: #1d1d1d;
+          }
         }
         :hover {
           height: 10vh;
@@ -666,6 +724,11 @@ h1 {
           border-radius: 20px;
           cursor: pointer;
           transition: 0.3s ease-in-out;
+          @media (max-width: 980px) {
+            width: 100%;
+            background-color: #d4d4d4;
+            height: 5vh;
+          }
         }
       }
     }
