--- a/src/styles.scss
+++ b/src/styles.scss
@@ -481,6 +481,7 @@ h1 {
         @media (max-width: 980px) {
           font-size: 3rem;
           margin: 3%;
+          text-shadow: rgb(0, 0, 0) 5px 5px 2px;
           text-align: center;
         }
       }
@@ -489,6 +490,7 @@ h1 {
         // background-color: orangered;
         padding: 0;
         color: #efe22b;
+        text-shadow: rgb(0, 0, 0) 5px 5px 2px;
         @media (max-width: 980px) {
           font-size: 1.3rem;
           text-align: center;
